--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "hepca",
+  "name": "ShakerHamdi",
   "version": "0.0.1",
-  "description": "Akhbar El-Youm Website",
+  "description": "Shaker Hamdi's Webistie",
   "repository": {
     "type": "git",
-    "url": "https://bitbucket.org/sheko_elanteko/hepca"
+    "url": "https://bitbucket.org/sheko_elanteko/shaker-init"
   },
   "author": "Shaker Hamdi",
   "devDependencies": {
+    "browser-sync": "^2.10.0",
     "gulp": "^3.8.8",
-    "gulp-browserify": "^0.5.0",
     "gulp-compass": "^1.3.3",
     "gulp-concat": "^2.4.1",
-    "gulp-connect": "^2.0.6",
     "gulp-if": "^1.2.5",
-    "gulp-livereload": "^2.1.1",
+    "gulp-notify": "^2.2.0",
     "gulp-uglify": "^1.0.1",
-    "gulp-util": "^3.0.1",
-    "jquery": "^2.1.1"
+    "gulp-util": "^3.0.1"
   }
 }
+
