--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-if": "^1.2.5",
     "gulp-notify": "^2.2.0",
     "gulp-uglify": "^1.0.1",
+    "gulp-cssnano": "<=3.6.2",
     "gulp-util": "^3.0.1"
   }
 }
