--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ npm-debug.log
 
 #folders
 images/placeholders/*
+builds/production
 builds/**/images/placeholders/*
 node_modules
 bower_components
